updated attribute management

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT=5000
 # MONGO_URI="mongodb://localhost:27017/foodRecipe"
 # CONNECTION_STRING="mongodb+srv://harsh:IzORsgx79sKRWRTF@cluster0.8yugvol.mongodb.net/carrier?retryWrites=true&w=majority&appName=Cluster0"
+# CONNECTION_STRING="mongodb+srv://web202526:Q0zKn6LPOkZr14y1@cluster0.pq2wpck.mongodb.net/carrierlocal?retryWrites=true&w=majority&appName=Cluster0"
 CONNECTION_STRING="mongodb+srv://web202526:Q0zKn6LPOkZr14y1@cluster0.pq2wpck.mongodb.net/carrier?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="Harshit12345"
 EMAIL_USER="developertest2004.06@gmail.com"
